<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    style="@style/match_parentAll"
    android:gravity="center_vertical"
    android:background="@drawable/login_image"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/welcomeText"
       style="@style/header"
         android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/welcome_to_travel_io"/>


    <TextView
            android:id="@+id/description"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:text="@string/description"
           style="@style/header2"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
          style="@style/wrap_content_matchParent">

        <Button
            android:id="@+id/incidentButton"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:onClick="showIncidents"
            android:layout_weight="1"
            android:text="@string/current_incidents"
            />

        <Button
            android:id="@+id/routePlanner"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:onClick="planRoute"
            android:layout_weight="1"
            android:text="Journey Planner"
            >

        </Button>
    </LinearLayout>





</LinearLayout>